Added WMP style shell

--- a/client/themes/wmp-9/css/wmp-9.css
+++ b/client/themes/wmp-9/css/wmp-9.css
@@ -65,3 +65,6 @@ sp-mediasidebaritem {
 sp-mediasidebaritem:hover {
   background: url('../images/header.png');
 }
+sp-sidebar sp-searchform {
+    display: flex;
+}
