--- a/client/themes/wmp-10/css/wmp-10.css
+++ b/client/themes/wmp-10/css/wmp-10.css
@@ -36,6 +36,9 @@ sp-mediasidebar sp-mediasidebaritem:hover {
 sp-mediasidebar sp-mediasidebaritem:active {
   background: linear-gradient(-180deg, rgba(0, 80, 100, 1), rgba(0, 80, 100, 0.8));
 }
+sp-mediasidebar sp-mediasidebaritem.active {
+  background: linear-gradient(-180deg, rgba(0, 80, 100, 1), rgba(0, 80, 100, 0.8));
+}
 sp-appheader sp-searchform {
   display: none;
 }
@@ -63,4 +66,7 @@ sp-rightsidebar     {
   padding: 0pt !important;
   margin: 0pt !important;
 
+}
+sp-sidebar sp-searchform {
+    display: flex;
 }
