--- a/client/themes/spotify-2018/css/spotify-2018.css
+++ b/client/themes/spotify-2018/css/spotify-2018.css
@@ -38,7 +38,7 @@ input {
 }
 .header-description sp-toolbar {
 }
-sp-appheader, sp-appfooter {
+sp-appheader, sp-appfooter, sp-bottomtabbar {
     
 }
 .type {
