--- a/client/themes/wmp-9/css/wmp-9.css
+++ b/client/themes/wmp-9/css/wmp-9.css
@@ -54,6 +54,9 @@ sp-mediasidebar {
 sp-appheader sp-searchform {
   display: none;
 }
+.sp-current-track td {
+    background: black !important;
+}
 
 sp-mediasidebaritem {
   display: flex;
