--- a/client/themes/spotify-2011/css/light.css
+++ b/client/themes/spotify-2011/css/light.css
@@ -102,7 +102,7 @@ background: linear-gradient(to bottom,  #d8d8d8 1%,#c4c4c4 100%); /* W3C, IE10+,
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d8d8d8', endColorstr='#c4c4c4',GradientType=0 ); /* IE6-9 */
 
 }
-sp-appfooter {
+sp-appfooter, sp-bottomtabbar {
 /* Permalink - use to edit and share this gradient: http://colorzilla.com/radient-editor/#999999+0,545454+100 */
 background: #999999; /* Old browsers */
 background: -moz-linear-gradient(top,  #999999 0%, #545454 100%); /* FF3.6-15 */
