--- a/client/themes/wmp-10/css/dark.css
+++ b/client/themes/wmp-10/css/dark.css
@@ -177,7 +177,7 @@ background: linear-gradient(to bottom,  rgba(249,250,248,1) 0%,rgba(243,242,235,
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9faf8', endColorstr='#fbaa04',GradientType=0 ); /* IE6-9 */
 
 }
-sp-appheader, sp-appfooter {
+sp-appheader, sp-appfooter, sp-bottomtabbar {
     padding: 5pt;
     background-size: 100% 100%;
     -webkit-filter: hue-rotate(var(--primary-hue)) saturate(var(--primary-saturation));
