Begin working on mobile support

--- a/client/css/bungalow.css
+++ b/client/css/bungalow.css
@@ -616,6 +616,9 @@ sp-bottomtabbar {
     sp-bottomtabbar .fa {
         font-size: 2rem !important;
     }
+    sp-mediasidebar {
+        display: none !important;
+    }
     sp-bottomtabbar {
         padding: 10pt !important;
         justify-content: space-around !important;
