--- a/client/themes/wmp-9/css/wmp-9.css
+++ b/client/themes/wmp-9/css/wmp-9.css
@@ -18,7 +18,9 @@ input[type=range]{
 input[type=range]::-webkit-slider-thumb {
     background: transparent;
 }
-
+sp-bottomtabbar {
+    color: #001122;
+}
 
 sp-header {
     display: none !important;
