--- a/client/themes/wmp-10/css/wmp-10.css
+++ b/client/themes/wmp-10/css/wmp-10.css
@@ -48,8 +48,12 @@ sp-mediasidebar sp-mediasidebaritem:active {
 sp-mediasidebar sp-mediasidebaritem.active {
   background: linear-gradient(-180deg, rgba(0, 80, 100, 1), rgba(0, 80, 100, 0.8));
 }
-sp-appheader sp-searchform {
-  display: none;
+@media screen and (min-width: 720pt) {
+
+
+    sp-appheader sp-searchform {
+        display: none;
+    }
 }
 
 
