Adding IndexedDB caching

--- a/client/css/bungalow.css
+++ b/client/css/bungalow.css
@@ -367,7 +367,8 @@ sp-appfootersection {
     justify-content: space-evenly;
 }
 sp-sidebarmenu {
-     flex: 2;
+     flex: 1;
+    overflow-y: scroll;
 }
 sp-sidebar {
     display: flex;
