Implementing WMP9 skin

--- a/client/themes/wmp-9/css/wmp-9.css
+++ b/client/themes/wmp-9/css/wmp-9.css
@@ -89,7 +89,7 @@ sp-trackcontrols sp-appfootersection:first-child {
   transform: translate(8rem, 1rem);
 }
 body {
-  background: #8af; 
+  background: transparent !important; 
 }
 sp-chrome {
   background: transparent !important;
