Rewritten WMP9 shell

--- a/client/themes/wmp-9/css/wmp-9.css
+++ b/client/themes/wmp-9/css/wmp-9.css
@@ -86,21 +86,82 @@ sp-toolbar {
   visibility: hidden;
 }
 sp-trackcontrols sp-appfootersection:first-child {
-  transform: translate(8rem, 1rem);
+  transform: translate(15rem, 1rem);
 }
 body {
   background: transparent !important; 
 }
 sp-chrome {
   background: transparent !important;
+  /*
   border-image-source: url("../images/shell.svg");
   background: url("../images/shell.svg");
   background-size: 100% 100%;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center;*/
   border-image-slice: 121 121 121 138; 
   border-image-width: 102px;
-  filter: hue-rotate(var(--primary-hue)) saturate(var(--primary-saturation)) drop-shadow(0 0 25pt rgba(0, 0, 0, 1));
+  filter: hue-rotate(var(--primary-hue)) saturate(var(--primary-saturation));
+}
+.shell-bg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 14.0rem 30rem auto auto 10rem;
+  grid-template-rows: 5rem auto 14.5rem;
+  filter: drop-shadow(0 0 25pt rgba(0, 0, 0, 1))  hue-rotate(var(--primary-hue)) saturate(var(--primary-saturation));
+}
+.shell-bg > div {
+  background: url('../images/shell.svg');
+  background-size: 1203pt 885pt;
+}
+.shell-bg > div:nth-of-type(1) {
+  background-position: 0 0;
+}
+.shell-bg > div:nth-of-type(2) {
+  background-position: 80rem 0;
+}
+.shell-bg > div:nth-of-type(3) {
+  background-position: 103rem 0;
+}
+.shell-bg > div:nth-of-type(4) {
+  background-position: -180rem 0;
+}
+.shell-bg > div:nth-of-type(5) {
+  background-position: -208rem 0;
+}
+.shell-bg > div:nth-of-type(6) {
+  background-position: 0 -5rem;
+}
+.shell-bg > div:nth-of-type(7) {
+  background-position: 7.0rem 4.5rem;
+}
+.shell-bg > div:nth-of-type(8) {
+  background-position: 7.0rem 4.5rem;
+}
+.shell-bg > div:nth-of-type(9) {
+  background-position: -10.0rem 4.5rem;
+}
+.shell-bg > div:nth-of-type(10) {
+  background-position: 0 9rem;
+}
+.shell-bg > div:nth-of-type(11) {
+  background-position: -0.1rem -64.36rem;
+}
+.shell-bg > div:nth-of-type(12) {
+  background-position: -14.0rem -64.36rem;
+}
+.shell-bg > div:nth-of-type(13) {
+  background-position: 500rem -64.36rem;
+}
+.shell-bg > div:nth-of-type(14) {
+  background-position: 582rem  -64.36rem;
+}
+.shell-bg > div:nth-of-type(15) {
+  background-position: 582rem  -64.36rem;
 }
 main { 
 } 
@@ -110,16 +171,25 @@ sp-sidebar, sp-main {
 
 }
 sp-appheader {
-  flex: 0 0 7rem;
+  flex: 0 0 5rem;
+  border: none !important;
+}
+sp-appfooter {
+  flex: 0 0 5.  5rem;
+  border: none !important;
 }
 sp-mediasidebar {
   background: transparent;
-  flex: 0 0 7.0rem;
+  flex: 0 0 14.0rem;
+}
+sp-mediasidebar  {
+  padding-left: 2rem;
+  padding-top: 2rem;
 }
 #playthumb {
   position: fixed;
   bottom: 3.5rem;
-  left: 8rem;
+  left: 15rem;
   width: calc(100% - 6rem);
   border: none !important;
   box-shadow: none !important;
